--- a/static/webapp/css/corporative.css
+++ b/static/webapp/css/corporative.css
@@ -51,6 +51,9 @@ img, object, embed {
 .container {
     z-index: 999;
     position: relative;
+}
+
+#container {
     background: #FFF;
 }
 
@@ -126,12 +129,106 @@ p {
     color: #DA7465;
 }
 
-.nuestro-equipo {
-    background: #C55240;
+.space90 {
+    margin-bottom: 90px;
+}
+
+.space60 {
+    margin-bottom: 60px;
+}
+
+.space30 {
+    margin-bottom: 30px;
+}
+
+.equipo {
+    background: #db5940;
     color: #FFF;
     padding: 60px 0 80px 0;
     margin-top: 25px;
     font-family: 'latoregular', sans-serif;
+}
+
+.equipo h3{
+    color: #fff;
+    text-transform: uppercase;
+    margin: 0 0 15px;
+    text-align: center;
+    font-size: 48px;
+    letter-spacing: 4px;
+}
+
+.equipo p{
+    font-size: 22px;
+    color: #f9d9d3;
+    text-align: center;
+    line-height: 36px;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.equipo .row {
+    max-width: none;
+    min-width: auto;
+}
+
+.staff-content {
+    background: #fff;
+    border-radius: 5px;
+    margin-top: 30px;
+}
+
+.staff-img {
+    display: table;
+    margin: 0 auto;
+    position: relative;
+    padding: 30px 0;
+    height: 174px;
+
+}
+
+.staff-content h5 {
+    font-size: 28px;
+    color: #393f4a;
+    font-weight: 300;
+    text-align: center;
+    margin: 0 0 5px;
+}
+
+.staff-content strong {
+    font-size: 18px;
+    display: block;
+    text-align: center;
+    color: #db5940;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.team-social {
+    padding: 0;
+    margin: 0 auto;
+    display: table;
+}
+
+.team-social li {
+    float: left;
+    list-style: none;
+    margin: 30px 5px 35px;
+}
+
+.team-social li i {
+    line-height: 40px;
+}
+
+.team-social li a {
+    width: 40px;
+    height: 40px;
+    color: #fff;
+    text-align: center;
+    line-height: 40px;
+    background: #b7b7b7;
+    border-radius: 50%;
+    display: table;
 }
 
 #footer {
@@ -153,7 +250,9 @@ p {
 }
 
 .titulo {
-   color: white;
+    color: white;
+    text-transform: uppercase;
+    font-size: 48px;
 }
 
 .foto-miembro{
