--- a/templates/webapp/corporative.html
+++ b/templates/webapp/corporative.html
@@ -25,11 +25,11 @@
 
             <!-- Logo -->
 
-            <h1 class=" logo" style="display: block;"><img width="100" src="{% static 'webapp/image/logo_white.png' %}"/></h1>
+            <img class="logo" src="{% static 'webapp/image/logo_white_shadow.png' %}"/>
 
             <!-- Title -->
 
-            <h2 class="" style="display: block;">Crea, comparte y dale tu toque</h2>
+            <h1 class="" style="display: block;">Crea, comparte y dale tu toque</h1>
 
 
           </div>
