--- a/templates/webapp/corporative.html
+++ b/templates/webapp/corporative.html
@@ -44,28 +44,17 @@
 
     <div id="container" class="container">
 
-        <!-- FIRST SECTION ############################################### -->
-
-    <br />
-    <br />
-
-        <section class="cbp-so-section cbp-so-init cbp-so-animate">
+        <section class="feature">
 
             <div class="row">
 
                 <div class="col-md-7">
+                    <h3>Crea y comparte</h3>
 
-                    <!-- Title -->
-
-                    <h3>Diseño simple</h3>
-
-                    <!-- Content -->
-
-                    <p>Bacon ipsum dolor sit amet chuck hamburger ribeye sirloin, meatloaf ball tip filet mignon pancetta shank. Tail turkey pork, ribeye sirloin tenderloin jerky beef bacon flank. <a href="#">Tenderloin strip steak</a> ham bacon short loin leberkas swine.</p>
+                    <p class="lead text-soft">Conviértete en el mejor Cheff de la red creando tus propias recetas y
+                        compartiéndolas con el mundo.</p>
 
                 </div>
-
-                <!-- Image from right -->
 
                 <div class="col-md-5">
 
@@ -77,18 +66,9 @@
 
         </section>
 
-        <!-- END FIRST SECTION ############################################### -->
-
-        <br />
-        <br />
-
-        <!-- SECOND SECTION ############################################### -->
-
-        <section class="cbp-so-section cbp-so-init cbp-so-animate">
+        <section class="feature">
 
             <div class="row">
-
-                <!-- Image from left -->
 
                 <div class="col-md-5">
 
@@ -98,42 +78,72 @@
 
                 <div class="col-md-7">
 
-                    <!-- Title -->
+                    <h3>Dale tu toque</h3>
+
+                    <p class="lead">Mejora recetas de otros cocineros, innova en ingredientes, preparación o presentación y consigue formar las mejores recetas.</p>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="feature">
+
+            <div class="row">
+
+                <div class="col-md-7">
 
                     <h3>Social</h3>
 
-                    <!-- Content -->
-
-                    <p>Bacon ipsum dolor sit amet chuck hamburger ribeye sirloin, meatloaf ball tip filet mignon pancetta shank. Tail turkey pork, ribeye sirloin tenderloin jerky beef bacon flank. <a href="#">Tenderloin strip steak</a> ham bacon short loin leberkas swine.</p>
+                    <p class="lead">Interactúa con el resto de cocineros. Vota y comenta tus recetas favoritas, sigue a otras personas para explorar sus ideas y sus descubrimientos.</p>
 
                 </div>
 
+                <div class="col-md-5">
 
+                    <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
+
+                </div>
 
             </div>
 
         </section>
 
-        <br />
-    <br />
+        <section class="feature">
 
-        <section class="cbp-so-section cbp-so-init cbp-so-animate">
+            <div class="row">
+
+                <div class="col-md-5">
+
+                    <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
+
+                </div>
+
+                <div class="col-md-7">
+
+                    <h3>Sabores y afinidad</h3>
+
+                    <p class="lead">Define tu receta con un perfil de sabores único y conoce cuánto le gusta a las
+                        personas que sigues.</p>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="feature">
 
             <div class="row">
 
                 <div class="col-md-7">
 
-                    <!-- Title -->
+                    <h3>En tu Smartphone</h3>
 
-                    <h3>Pruebalo en tu smartphone</h3>
-
-                    <!-- Content -->
-
-                    <p>Bacon ipsum dolor sit amet chuck hamburger ribeye sirloin, meatloaf ball tip filet mignon pancetta shank. Tail turkey pork, ribeye sirloin tenderloin jerky beef bacon flank. <a href="#">Tenderloin strip steak</a> ham bacon short loin leberkas swine.</p>
+                    <p class="lead">Las mejores recetas de la web al alcance de tu mano.</p>
 
                 </div>
-
-                <!-- Image from right -->
 
                 <div class="col-md-5">
 
