--- a/templates/webapp/corporative.html
+++ b/templates/webapp/corporative.html
@@ -17,216 +17,145 @@
 </head>
 <body>
 
-    <section id="header">
-
-        <div class="row">
-
-          <div class="col-md-12 text-center">
-
-            <!-- Logo -->
-
+<section id="header">
+    <div class="row">
+        <div class="col-md-12 text-center">
             <img class="logo" src="{% static 'webapp/image/logo_white_shadow.png' %}"/>
 
-            <!-- Title -->
-
             <h1 class="" style="display: block;">Crea, comparte y dale tu toque</h1>
-
-
-          </div>
-
-          <!-- Image coming from the bottom -->
-
-          <img class="picture text-center" src="{% static 'webapp/image/imagen-corporativa-1.png' %}" style="display: inline; top: 35px; overflow: hidden;">
-
         </div>
-
-    </section>
-
-    <div id="container" class="container">
-
-        <section class="feature">
-
-            <div class="row">
-
-                <div class="col-md-7">
-                    <h3>Crea y comparte</h3>
-
-                    <p class="lead text-soft">Conviértete en el mejor Cheff de la red creando tus propias recetas y
-                        compartiéndolas con el mundo.</p>
-
-                </div>
-
-                <div class="col-md-5">
-
-                    <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
-
-                </div>
-
-            </div>
-
-        </section>
-
-        <section class="feature">
-
-            <div class="row">
-
-                <div class="col-md-5">
-
-                    <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
-
-                </div>
-
-                <div class="col-md-7">
-
-                    <h3>Dale tu toque</h3>
-
-                    <p class="lead">Mejora recetas de otros cocineros, innova en ingredientes, preparación o presentación y consigue formar las mejores recetas.</p>
-
-                </div>
-
-            </div>
-
-        </section>
-
-        <section class="feature">
-
-            <div class="row">
-
-                <div class="col-md-7">
-
-                    <h3>Social</h3>
-
-                    <p class="lead">Interactúa con el resto de cocineros. Vota y comenta tus recetas favoritas, sigue a otras personas para explorar sus ideas y sus descubrimientos.</p>
-
-                </div>
-
-                <div class="col-md-5">
-
-                    <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
-
-                </div>
-
-            </div>
-
-        </section>
-
-        <section class="feature">
-
-            <div class="row">
-
-                <div class="col-md-5">
-
-                    <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
-
-                </div>
-
-                <div class="col-md-7">
-
-                    <h3>Sabores y afinidad</h3>
-
-                    <p class="lead">Define tu receta con un perfil de sabores único y conoce cuánto le gusta a las
-                        personas que sigues.</p>
-
-                </div>
-
-            </div>
-
-        </section>
-
-        <section class="feature">
-
-            <div class="row">
-
-                <div class="col-md-7">
-
-                    <h3>En tu Smartphone</h3>
-
-                    <p class="lead">Las mejores recetas de la web al alcance de tu mano.</p>
-
-                </div>
-
-                <div class="col-md-5">
-
-                    <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
-
-                </div>
-
-            </div>
-
-        </section>
-
-        </div>
-
-    <div class="equipo text-center">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="clearfix space30"></div>
-                <h3>Nuestro equipo</h3>
-
-                <p>Las personas detrás de EatHub que han hecho posible este proyecto.</p>
-
-                <div class="clearfix space30"></div>
-
-                <div class="col-md-offset-1 col-md-10">
-                    {% for staff in team %}
-                        <!-- Card -->
-                        <div class="col-md-4 {% if forloop.first %}col-md-offset-4{% endif %}">
-                            <div class="staff-content">
-                                <div class="staff-img">
-                                    <img src="{{ staff.picture }}"
-                                         class="img-responsive">
-                                </div>
-                                <h5>{{ staff.name }}</h5>
-                                <strong>{{ staff.position }}</strong>
-
-                                <ul class="team-social">
-                                    <li><a class="sl-mail" target="_blank" href="mailto://{{ staff.email }}"><i
-                                            class="fa fa-envelope"></i></a></li>
-                                    <li><a class="sl-linkedin" target="_blank" href="{{ staff.linkedin }}"><i
-                                            class="fa fa-linkedin"></i></a></li>
-                                    <li><a class="sl-twitter" target="_blank" href="{{ staff.twitter }}"><i
-                                            class="fa fa-twitter"></i></a></li>
-                                    <li><a class="sl-google-plus" target="_blank" href="{{ staff.gplus }}"><i
-                                            class="fa fa-google-plus"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <!-- /Card -->
-                        {% if forloop.first %}
-                            <div class="clearfix"></div>
-                        {% endif %}
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
-
+        <img class="picture text-center" src="{% static 'webapp/image/imagen-corporativa-1.png' %}"
+             style="display: inline; top: 35px; overflow: hidden;">
     </div>
+</section>
 
-        <!-- END SIGN UP SECTION ############################################### -->
-
-
-        <!-- FOOTER SECTION ############################################### -->
-
-    <section id="footer">
-
+<div id="container" class="container">
+    <section class="feature">
         <div class="row">
+            <div class="col-md-7">
+                <h3>Crea y comparte</h3>
 
-            <!-- Text from left -->
-
-            <div class="col-md-7 pull_left">
-
-                <p class="color-text-footer">© 2014 Eathub.</p>
-
+                <p class="lead text-soft">Conviértete en el mejor Cheff de la red creando tus propias recetas y
+                    compartiéndolas con el mundo.</p>
             </div>
-
-
+            <div class="col-md-5">
+                <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
+            </div>
         </div>
-
     </section>
 
-    <script src="{% static 'webapp/js/jquery.min.js' %}"></script>
-    <script src="{% static 'webapp/js/bootstrap.min.js' %}"></script>
+    <section class="feature">
+        <div class="row">
+            <div class="col-md-5">
+                <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
+            </div>
+            <div class="col-md-7">
+                <h3>Dale tu toque</h3>
+
+                <p class="lead">Mejora recetas de otros cocineros, innova en ingredientes, preparación o presentación y
+                    consigue formar las mejores recetas.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="feature">
+        <div class="row">
+            <div class="col-md-7">
+                <h3>Social</h3>
+
+                <p class="lead">Interactúa con el resto de cocineros. Vota y comenta tus recetas favoritas, sigue a
+                    otras personas para explorar sus ideas y sus descubrimientos.</p>
+            </div>
+
+            <div class="col-md-5">
+                <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
+            </div>
+        </div>
+    </section>
+
+    <section class="feature">
+        <div class="row">
+            <div class="col-md-5">
+                <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
+            </div>
+
+            <div class="col-md-7">
+                <h3>Sabores y afinidad</h3>
+
+                <p class="lead">Define tu receta con un perfil de sabores único y conoce cuánto le gusta a las
+                    personas que sigues.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="feature">
+        <div class="row">
+            <div class="col-md-7">
+                <h3>En tu Smartphone</h3>
+
+                <p class="lead">Las mejores recetas de la web al alcance de tu mano.</p>
+            </div>
+
+            <div class="col-md-5">
+                <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
+            </div>
+        </div>
+    </section>
+</div>
+
+<div class="equipo text-center">
+    <div class="container">
+        <div class="row">
+            <div class="clearfix space30"></div>
+            <h3>Nuestro equipo</h3>
+
+            <p>Las personas detrás de EatHub que han hecho posible este proyecto.</p>
+
+            <div class="clearfix space30"></div>
+            <div class="col-md-offset-1 col-md-10">
+                {% for staff in team %}
+                    <!-- Card -->
+                    <div class="col-md-4 {% if forloop.first %}col-md-offset-4{% endif %}">
+                        <div class="staff-content">
+                            <div class="staff-img">
+                                <img src="{{ staff.picture }}"
+                                     class="img-responsive">
+                            </div>
+                            <h5>{{ staff.name }}</h5>
+                            <strong>{{ staff.position }}</strong>
+
+                            <ul class="team-social">
+                                <li><a class="sl-mail" target="_blank" href="mailto://{{ staff.email }}"><i
+                                        class="fa fa-envelope"></i></a></li>
+                                <li><a class="sl-linkedin" target="_blank" href="{{ staff.linkedin }}"><i
+                                        class="fa fa-linkedin"></i></a></li>
+                                <li><a class="sl-twitter" target="_blank" href="{{ staff.twitter }}"><i
+                                        class="fa fa-twitter"></i></a></li>
+                                <li><a class="sl-google-plus" target="_blank" href="{{ staff.gplus }}"><i
+                                        class="fa fa-google-plus"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- /Card -->
+                    {% if forloop.first %}
+                        <div class="clearfix"></div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<section id="footer">
+    <div class="row">
+        <div class="col-md-12">
+            <p class="color-text-footer">© 2014 Eathub.</p>
+        </div>
+    </div>
+</section>
+
+<script src="{% static 'webapp/js/jquery.min.js' %}"></script>
+<script src="{% static 'webapp/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
