--- a/templates/webapp/corporative.html
+++ b/templates/webapp/corporative.html
@@ -39,7 +39,7 @@
                     compartiéndolas con el mundo.</p>
             </div>
             <div class="col-md-5">
-                <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
+                <img src="{% static 'webapp/image/feature_comparte.png' %}">
             </div>
         </div>
     </section>
@@ -47,7 +47,7 @@
     <section class="feature">
         <div class="row">
             <div class="col-md-5">
-                <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
+                <i class="fa fa-code-fork"></i>
             </div>
             <div class="col-md-7">
                 <h3>Dale tu toque</h3>
@@ -68,7 +68,7 @@
             </div>
 
             <div class="col-md-5">
-                <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
+                <img src="{% static 'webapp/image/feature_comentarios.png' %}">
             </div>
         </div>
     </section>
@@ -76,7 +76,7 @@
     <section class="feature">
         <div class="row">
             <div class="col-md-5">
-                <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
+                <img src="{% static 'webapp/image/feature_sabores.png' %}">
             </div>
 
             <div class="col-md-7">
@@ -97,7 +97,7 @@
             </div>
 
             <div class="col-md-5">
-                <img src="{% static 'webapp/image/imagen-corporativa-2.png' %}">
+                <img src="{% static 'webapp/image/feature_n5.png' %}">
             </div>
         </div>
     </section>
