Añadido Favicon y cambiado título a la web corporativa

--- a/templates/webapp/corporative.html
+++ b/templates/webapp/corporative.html
@@ -5,15 +5,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="{% static 'webapp/image/favicon.ico' %}">
 
-    <title>EatHub</title>
+    <title>EatHub Corporative</title>
     <link href='http://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
 
     <link href="{% static 'webapp/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'webapp/css/corporative.css' %}" rel="stylesheet">
     <link href="{% static 'webapp/css/font-awesome.min.css' %}" rel="stylesheet">
-
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
 
