Cambiado orden de columnas en feature.
Coloca el texto antes de la imagen, para que en pantallas pequeñas de 1 columna salga encima. En pantallas grandes usa pull/push para ordenar las imágenes en zigzag.

--- a/templates/webapp/corporative.html
+++ b/templates/webapp/corporative.html
@@ -45,14 +45,14 @@
 
     <section class="feature">
         <div class="row">
-            <div class="col-md-5">
-                <i class="fa fa-code-fork"></i>
-            </div>
-            <div class="col-md-7">
+            <div class="col-md-7 col-md-push-5">
                 <h3>Dale tu toque</h3>
 
                 <p class="lead">Mejora recetas de otros cocineros, innova en ingredientes, preparación o presentación y
                     consigue formar las mejores recetas.</p>
+            </div>
+            <div class="col-md-5 col-md-pull-7">
+                <i class="fa fa-code-fork"></i>
             </div>
         </div>
     </section>
@@ -74,15 +74,15 @@
 
     <section class="feature">
         <div class="row">
-            <div class="col-md-5">
-                <img src="{% static 'webapp/image/feature_sabores.png' %}">
-            </div>
 
-            <div class="col-md-7">
+            <div class="col-md-7 col-md-push-5">
                 <h3>Sabores y afinidad</h3>
 
                 <p class="lead">Define tu receta con un perfil de sabores único y conoce cuánto le gusta a las
                     personas que sigues.</p>
+            </div>
+            <div class="col-md-5 col-md-pull-7">
+                <img src="{% static 'webapp/image/feature_sabores.png' %}">
             </div>
         </div>
     </section>
