--- a/templates/webapp/search_recipe_result.html
+++ b/templates/webapp/search_recipe_result.html
@@ -16,7 +16,7 @@
     <script type="text/javascript">
         var settings;
         $().ready(function () {
-            $('select').selectpicker(); //TODO ¿Poner esto en toda la web y ya está?
+            $('select').selectpicker();
             $('.slider').slider();
         });
     </script>
