--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -366,6 +366,18 @@ header .container {
 .gallery .gallery-item {
     height: 100%;
     padding: 10px;
+    position: relative;
+}
+
+.gallery-item:hover input {
+    display: block;
+}
+
+div.gallery-item input {
+    display: none;
+    top: 0;
+    left: 0;
+    position: absolute;
 }
 
 .gallery-item img {
@@ -1743,3 +1755,4 @@ footer {
 .card-left{
     margin-top: 86px;
 }
+
