--- a/templates/webapp/newrecipe.html
+++ b/templates/webapp/newrecipe.html
@@ -58,7 +58,7 @@
         }
 
         function addGalleryPicture(url, id) {
-            $("#gallery").append('<div class="col-sm-3 gallery-item"><img class="img-rounded" src="' + url + '" data-picture-id="' + id + '"><input type="button" value="click"></div>');
+            $("#gallery").append('<div class="col-sm-3 gallery-item"><span class="glyphicon glyphicon-remove"></span><div class="alpha"></div><img class="img-rounded" src="' + url + '" data-picture-id="' + id + '"></div>');
         }
 
         function procesaFormularioInicial() {
