centrado el boton para eliminar la foto

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -379,8 +379,8 @@ header .container {
 
 div.gallery-item span {
     display: none;
-    top: 0;
-    left: 0;
+    top: 40%;
+    left: 40%;
     position: absolute;
     font-size: 200%;
     z-index: 1;
