--- a/templates/webapp/newrecipe.html
+++ b/templates/webapp/newrecipe.html
@@ -399,6 +399,7 @@
                                 <span>{row-number-placeholder}</span>
                             </div>
                             <div class="col-sm-9">
+                                <span class="glyphicon glyphicon-remove-circle recipe-step-remove"></span>
                                 {% trans "Describe this step..." as step_description %}
                                 <textarea class="form-control input-lg step-input"
                                           placeholder="{{ step_description }}"
